<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PosTrack</string>
    <string name="hello_world">Hello world 1!</string>
    <string name="action_settings">Settings</string>
    <string name="button_1">Export unknown cells</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_2">Location History on Maps</string>
    <string name="button_3">Force GSM Update</string>
    <string name="title_activity_maps2">Map2</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_use_android_provider">Use location provided by Android</string>
    <string name="pref_description_use_android_provider">Use GPS or WiFi+cell position, if enabled on the phone</string>

    <string name="pref_title_position_service_enabled">Look for position</string>
    <string name="pref_description_position_service_enabled">If disabled the app will not work</string>

    <string name="pref_title_update_url_enabled">Send updates</string>
    <string name="pref_description_update_url_enabled">If disabled the app will not call the URL</string>

    <string name="pref_title_start_on_boot">Start on phone boot</string>
    <string name="pref_description_start_on_boot">The process will start automatically when you switch on your phone</string>

    <string name="pref_title_show_notifications">Display notifications</string>
    <string name="pref_description_show_notifications">They will be sent only on home enter/leave</string>

    <string name="pref_title_update_url">Url for updates</string>
    <string name="pref_default_update_url">http://emonbovisa.hostinggratis.it/app.php?arrivo=</string>

    <string name="pref_title_home_latitude">Home latitude:</string>
    <string name="pref_default_home_latitude">45.5032028</string>

    <string name="pref_title_home_longitude">Home longitude:</string>
    <string name="pref_default_home_longitude">9.1561746</string>

    <string name="pref_title_home_radius">Threshold radius (m):</string>
    <string name="pref_default_home_radius">2000</string>

    <string name="pref_title_gps_interval">Update GPS every (minutes):</string>
    <string name="pref_default_gps_interval">5</string>

    <string name="pref_title_nw_interval">Update WiFi every (minutes):</string>
    <string name="pref_default_nw_interval">5</string>

    <string name="pref_title_general_category">General Settings:</string>
    <string name="pref_title_location_category">GPS and WiFi location</string>
    <string name="pref_title_confidence_category">Trigger change if either</string>
    <string name="pref_title_update_category">Update to emon</string>

    <string name="pref_title_min_poll">The last X positions are coherent</string>
    <string name="pref_default_min_poll">3</string>
    <string name="pref_title_min_time">All positions older than X seconds are coherent:</string>
    <string name="pref_default_min_time">100</string>

    <string name="pref_title_sms_number">SMS addressee</string>
    <string name="pref_default_sms_number">+393311846119</string>
    <string name="pref_title_device_name">Device name</string>
    <string name="pref_default_device_name">Asdrubale</string>
    <string name="pref_title_sms_prefix">Prefix to SMS text:</string>
    <string name="pref_default_sms_prefix">121984_</string>
    <string name="pref_title_use_sms">Send SMS for update</string>
    <string name="pref_description_use_sms">(only if network communication fails)</string>

    <string name="pref_title_database_file">Cell database location</string>
    <string name="pref_description_database_file">/sd/asa/</string>
    <string name="pref_default_database_file">/storage/emulated/0/lacells.db</string>
    <string name="file_dialog_negative_button">Cancel</string>
    <string name="file_dialog_positive_button">Choose</string>

    <string name="db_not_found_dialog_title">Unable to open the cell tower database</string>
    <string name="db_not_found_dialog_negative">Ok</string>
    <string name="db_not_found_dialog_positive">Download</string>
    <string name="db_not_found_dialog_text">File [db] not found. You can set it to another path in Advanced Settings. If you still do not have it, you can download it.</string>
    <string name="pref_title_advanced">Advanced settings</string>
</resources>
